--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -1,4 +1,35 @@
 .splide__slide img {
     width: 100%;
-    height: auto;
+    height: 100%;
+    object-fit:cover;
   }
+
+.LandingSecondLayer {
+  display: flex;
+  height: 550px;
+  width: 100%;
+}
+
+.SecondLayerLeft {
+  flex: 1;
+}
+
+.SecondLayerRight {
+  flex: 1;
+}
+
+.SecondLayerText {
+  position: relative;
+  left: 25%;
+  top: 50%;
+  text-align: center;
+  width: 50%;
+}
+
+.subheading-text {
+  font-family: "Abel", sans-serif;
+}
+
+.SecondlayerImages{
+  height: 550px;
+}
