--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -3,6 +3,19 @@
   }
 */
 
+// .nav{
+//     background: #CA3400;
+//     color: #FFF;
+//     display: flex
+// }
+
+// .sticky{
+//     position: fixed;
+//     top: 0;
+//     left: 0;
+//     width: 100%
+// }
+
 .navtextbtn:hover {
     position: relative;
     text-decoration: none;
