--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,102 @@
   padding: .25rem;
 }
 
+.FooterLogo {
+  position: relative;
+  height: 100px;
+  top: 15%;
+}
+
+.FooterText {
+  position: relative;
+  top: -10%;
+  left: 25%;
+  width: 60%;
+  font-family: "Abel", sans-serif;
+  font-size: 20px;
+}
+
+.payment-icons {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  box-sizing: border-box;
+  margin: 20px;
+  display: block;
+  list-style-type: none;
+  top: 12%;
+
+}
+
+.icon--payment{
+  text-decoration: none;
+  color: inherit;
+  margin: 10px;
+}
+
+
+.FooterCopyright {
+  font-family: "Abel", sans-serif;
+  letter-spacing: 1px;
+  font-size: 12px;
+  font-weight: 400;
+  color: black;
+  margin-left: 7rem;
+}
+
+.FooterShopList{
+  position: relative;
+  top: 15%;
+  padding: 0;
+  text-transform: uppercase;
+  font-size: 18px;
+  color: black;
+  text-decoration: none;
+  background: transparent;
+  line-height: 2.5rem;
+  font-family: "Abel", sans-serif;
+  list-style-type: none;
+}
+
+.FooterShopList li a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.FooterTitle {
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.Footer {
+  position: relative;
+  display: flex;
+  background-color: #ffffff;
+  height: 400px;
+  width: auto;
+  margin-left: 20rem;
+  margin-right: 20rem;
+}
+
+.FooterBox1 {
+  flex: 2;
+  background-color: #ffffff;
+}
+
+.FooterBox2{
+  flex: 1;
+  background-color: #ffffff;
+}
+
+.FooterBox3 {
+  flex: 1;
+  /* background-color: azure; */
+}
+
+.FooterBox4 {
+  flex: 2;
+  /* background-color: red; */
+}
 /* .App {
   text-align: center;
 }
