--- a/styles/globals.css
+++ b/styles/globals.css
@@ -998,3 +998,48 @@ color: inherit;
   flex: 2;
   /* background-color: red; */
 }
+
+.navtextbtn {
+  font-family: "Abel", sans-serif;
+  font-weight: 300;
+  font-size: 1.3rem;
+  letter-spacing: 0.025em;
+  line-height: 1.8;
+  padding: 7.5px 15px;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  padding: 0 1rem;
+  height: 100%;
+  cursor: pointer;
+
+}
+
+
+.animatedNavBarpre {
+  position: absolute;
+  margin-top: 1.5rem;
+  width: 100%;
+  height: 80px;
+  display: flex;
+  justify-content: space-between;
+  padding: 0.5rem calc((100vw - 1000px) / 2);
+  z-index: 10;
+  top: 0;
+  transition-duration: .5s;
+}
+
+.animatedNavBarpost {
+  position: fixed;
+  background: rgb(50, 50, 50);;
+  width: 100%;
+  height: 60px;
+  display: flex;
+  justify-content: space-between;
+  padding: 0.5rem calc((100vw - 1000px) / 2);
+  z-index: 10;
+  top: 0;
+  transition-duration: .5s;
+}
+
